fix some readability problems in bubbles

--- a/src/main-scss/bubble.scss
+++ b/src/main-scss/bubble.scss
@@ -22,6 +22,9 @@
 			max-width: 400px;
 		}
 	}
+	h1, h2, h3, h4 {
+		color: $bubble-color;
+	}
 	.bubble-arrow {
 		width: 0;
 		height: 0;
