--- a/src/main-scss/chat.scss
+++ b/src/main-scss/chat.scss
@@ -269,7 +269,7 @@ body.pad #me {
 		flex-direction: column;
 		overflow: hidden;
 		margin: 5px 0;
-		transform: scale(.97);
+		//transform: scale(.97);
 	}
 	.user-messages.single {
 		border-radius: 3px;
